030-software/fluxcd/apps/alloy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alloy
  labels:
    namespace: alloy
