030-software/fluxcd/apps/alloy/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy
  annotations:
    dashboard.${domain}/name: alloy
    dashboard.${domain}/url: https://alloy.${domain}
    dashboard.${domain}/icon: wrench
spec:
  hostnames:
  - alloy.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: alloy
      port: 12345
    matches:
    - path:
        type: PathPrefix
        value: /
